--- a/src/main/resources/templates/user/addUser.html
+++ b/src/main/resources/templates/user/addUser.html
@@ -21,7 +21,7 @@
                             <div class="form-group">
                                 <input class="form-control" th:field="*{email}"
                                        placeholder="Email" type="email"/>
-                                <span class="error" th:errors="*{email}"></span>
+                                <span class="error" th:text="${emailExist}"></span>
                             </div>
 
                             <div class="form-group">
@@ -39,6 +39,7 @@
                             <div class="form-group">
                                 <input class="form-control" id="verifyPassword-field" name="verifyPassword"
                                        placeholder="Confirm Password" type="password"/>
+                                <span class="error" th:text="${errormessage}"></span>
                             </div>
 
                             <button type="submit" class="btn btn-success">Sign-Up</button>
