Added javascript code to put playgrounds markers on Search result page

--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -106,15 +106,8 @@
             </div>
 
             <div id="map" style="width:40%; height:400px; margin-left: auto; margin-right: auto"></div>
-            <script>
-                function initMap(){
-                    var location = document.getElementById('playgroundName').value;
-                    loadMap(location);
-                }
 
-            </script>
-
-            <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC7hSUws5hbDKi3JScfBgPEKeGo4EbJb_s&amp;callback=initMap"
+            <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC7hSUws5hbDKi3JScfBgPEKeGo4EbJb_s&amp;callback=loadMap"
                     async="async" defer="defer">
             </script>
         </div>
