--- a/src/main/resources/templates/search-results.html
+++ b/src/main/resources/templates/search-results.html
@@ -6,6 +6,7 @@
     <h1 th:text="'Display results with' + ' \'' + ${aname} + '\' ' +'in them:'">Display a name</h1>
 
 <p th:unless="${anotherlistmodel} and ${anotherlistmodel.size()}"> no results</p>
+<div id="map" style="width:100%; height:400px; margin-left: auto; margin-right: auto"></div>
 
 <table>
     <tr>
@@ -13,11 +14,20 @@
         <th>Description</th>
         <th>Address</th>
     </tr>
-    <tr th:each="anitem: ${anotherlistmodel}">
+
+    <tr th:each="anitem, itemStat: ${anotherlistmodel}">
+        <input id="playgroundName" th:name="|playgroundNames[${itemStat.index}]|" th:value="${anitem.getName()}"
+               type="hidden"/>
         <td th:text="${anitem.name}"></td>
         <td th:text="${anitem.description}"></td>
         <td th:text="${anitem.address}"></td>
     </tr>
 </table>
+
+<script async="async"
+        defer="defer"
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC7hSUws5hbDKi3JScfBgPEKeGo4EbJb_s&amp;callback=loadMap">
+</script>
+
 </body>
 </html>
