--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -21,6 +21,8 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <!-- Javascript to render map -->
     <script th:src="@{/js/renderMap.js}" type="text/javascript"></script>
+    <script th:src="@{/js/googleMapSearch.js}" type="text/javascript"></script>
+
 </head>
 
 <body>
