Fixes after merge

--- a/src/main/resources/templates/search-results.html
+++ b/src/main/resources/templates/search-results.html
@@ -35,6 +35,10 @@
         </div>
     </div>
 
+    <script async="async"
+            defer="defer" src="https://maps.googleapis.com/maps/api/js?key=Your_Key&amp;callback=loadMap">
+    </script>
+
     <footer th:replace="fragments :: footer"></footer>
 </body>
 </html>
