--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
             </div>
             <div class="card-body">
                 <div id="map" style="width:80%; height:400px; margin-left: auto; margin-right: auto"></div>
-                <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY&amp;callback=initMap"
+                <script src="https://maps.googleapis.com/maps/api/js?key=Your_key&amp;libraries=places&amp;callback=searchMap"
                         async="async" defer="defer"></script>
             </div>
         </div>
