--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -222,7 +222,7 @@
                     <div class="card-body h-50">
                         <div id="map" style="width:40%; height:400px; margin-left: auto; margin-right: auto"></div>
 
-                        <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY&amp;callback=initMap"
+                        <script src="https://maps.googleapis.com/maps/api/js?key=Your_Key&amp;callback=loadMap"
                                 async="async" defer="defer">
                         </script>
                     </div>
