Fixed missing closing div tag in index.html;

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -84,9 +84,7 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
     </nav>
 
     <!-- Footer Information -->
-    <span th:fragment="footer" class="footer text-center text-muted">
-        STL Playground Finder | 2019
-    </span>
+    <span th:fragment="footer" class="footer text-center text-muted">STL Playground Finder | 2019</span>
 
 </body>
 </html>
