--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,6 +16,7 @@
                         async="async" defer="defer"></script>
             </div>
         </div>
+    </div>
 
     <footer th:replace="fragments :: footer"></footer>
 </body>
