Adjusted add.html format to prevent horizontal scroll bar.

--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -13,9 +13,7 @@
         </div>
 
         <div class="card-body">
-            <div class="card w-50 mx-auto">
-                <div class="card-body">
-
+                <div class="w-50 mx-auto">
                     <form method="post" th:action="@{/add}" th:object="${playground}">
                         <!--General -->
                         <div class="form-group row">
@@ -189,7 +187,6 @@
 
                     </form>
                 </div>
-            </div>
         </div>
     </div>
 </div>
